--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "genai-mcp",
+  "name": "mcp-server",
   "version": "1.0.0",
   "main": "index.js",
-  "dependencies": {
-    "@modelcontextprotocol/inspector": "^0.1.0"
-  },
   "scripts": {
     "start": "node index.js"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/inspector": "^0.1.0"
   }
 }
