--- a/tools.yaml
+++ b/tools.yaml
@@ -8,7 +8,7 @@ sources:
 tools:
   # Tool per ottenere lo schema di una tabella specifica
   get_table_schema:
-    kind: bigquery-get-table-info # Questo tool del toolbox è perfetto per questo!
+    kind: bigquery-get-table-info
     source: my-bigquery-source
     description: Restituisce lo schema dettagliato di una tabella BigQuery dato il dataset e il nome della tabella.
     parameters:
@@ -20,24 +20,20 @@ tools:
         description: L'ID della tabella BigQuery (es. 'my_table').
 
   # Tool per eseguire una query SQL arbitraria (con cautela!)
-execute_raw_sql:
-        kind: bigquery-sql
-        source: my-bigquery-source
-        description: Esegue una query SQL grezza su BigQuery. Usare con cautela e solo per query SELECT.
-        parameters:
-          - name: sql_query
-            type: string
-            description: La query SQL completa da eseguire.
-        statement: |
-          ${sql_query} # Questo è il placeholder che il toolbox sostituirà con il valore del parametro
+  execute_raw_sql:  
+    kind: bigquery-sql
+    source: my-bigquery-source
+    description: Esegue una query SQL grezza su BigQuery. Usare con cautela e solo per query SELECT.
+    parameters:
+      - name: sql_query
+        type: string
+        description: La query SQL completa da eseguire.
+    statement: |
+      ${sql_query}
 
   # Tool più sicuro per la generazione di query basata su contesto
-  # Questa è la chiave per la flessibilità con l'LLM!
-  generate_and_execute_query:
-    kind: bigquery-query-generation # Questo è un tipo di tool ipotetico/concettuale
-                                    # Potrebbe essere gestito internamente dal toolbox
-                                    # o richiedere un LLM che usi i tool di schema discovery
-                                    # per poi generare la query.
+  generate_and_execute_query: # <--- CORRETTO: Indentato allo stesso livello
+    kind: bigquery-query-generation
     source: my-bigquery-source
     description: Genera ed esegue una query SQL BigQuery basandosi su una richiesta in linguaggio naturale e lo schema del database.
     parameters:
@@ -50,5 +46,3 @@ execute_raw_sql:
       - name: table_id # Opzionale, per suggerire una tabella specifica
         type: string
         description: La tabella BigQuery su cui l'utente vuole fare la query.
-      # Qui il toolbox userà i suoi strumenti interni (come get-table-info)
-      # e un LLM per costruire la query in modo dinamico.
