--- a/tools.yaml
+++ b/tools.yaml
@@ -5,19 +5,14 @@ sources:
     project: ${GCP_PROJECT_ID} # O il tuo ID progetto fisso
 
 # tools definisce le azioni che l'LLM può eseguire
+
 tools:
   # Tool per ottenere lo schema di una tabella specifica
   get_table_schema:
-    kind: bigquery-get-table-info
+    kind: bigquery-get-table-info # Questo tool del toolbox è perfetto per questo!
     source: my-bigquery-source
-    description: Restituisce lo schema dettagliato di una tabella BigQuery dato il dataset e il nome della tabella.
-    parameters:
-      - name: dataset_id
-        type: string
-        description: L'ID del dataset BigQuery (es. 'my_dataset').
-      - name: table_id
-        type: string
-        description: L'ID della tabella BigQuery (es. 'my_table').
+    description: Restituisce lo schema dettagliato di una tabella BigQuery. # Modificato la descrizione
+
 
   # Tool per eseguire una query SQL arbitraria (con cautela!)
   execute_raw_sql:  
