--- a/tools.yaml
+++ b/tools.yaml
@@ -1,105 +1,20 @@
-# tools.yaml
+# tools.yaml - versione minima per test
 sources:
-  # Esempio con PostgreSQL
-  my-postgres-db:
+  test-source:
     kind: postgres
-    host: ${DATABASE_HOST}
-    port: ${DATABASE_PORT}
-    database: ${DATABASE_NAME}
-    user: ${DATABASE_USER}
-    password: ${DATABASE_PASSWORD}
-    
-  # Esempio con MySQL (opzionale)
-  my-mysql-db:
-    kind: mysql
-    host: ${MYSQL_HOST}
-    port: ${MYSQL_PORT}
-    database: ${MYSQL_DATABASE}
-    user: ${MYSQL_USER}
-    password: ${MYSQL_PASSWORD}
+    host: ${DATABASE_HOST:-localhost}
+    port: ${DATABASE_PORT:-5432}
+    database: ${DATABASE_NAME:-test}
+    user: ${DATABASE_USER:-user}
+    password: ${DATABASE_PASSWORD:-password}
 
 tools:
-  # Tool per cercare dati
-  search-records:
+  ping:
     kind: postgres-sql
-    source: my-postgres-db
-    description: Cerca record nel database usando una query di testo
-    parameters:
-      - name: search_term
-        type: string
-        description: Il termine da cercare
-    statement: |
-      SELECT id, name, description, created_at 
-      FROM your_table_name 
-      WHERE name ILIKE '%' || $1 || '%' 
-         OR description ILIKE '%' || $1 || '%'
-      LIMIT 20;
-
-  # Tool per statistiche
-  get-stats:
-    kind: postgres-sql
-    source: my-postgres-db
-    description: Ottieni statistiche generali dal database
-    statement: |
-      SELECT 
-        COUNT(*) as total_records,
-        COUNT(DISTINCT category) as total_categories,
-        MAX(created_at) as last_update
-      FROM your_table_name;
-
-  # Tool per dati per periodo
-  get-data-by-period:
-    kind: postgres-sql
-    source: my-postgres-db
-    description: Ottieni dati aggregati per periodo
-    parameters:
-      - name: period
-        type: string
-        description: Periodo di aggregazione (day, week, month)
-      - name: days_back
-        type: integer
-        description: Numero di giorni indietro da considerare
-    statement: |
-      SELECT 
-        DATE_TRUNC($1, created_at) as period,
-        COUNT(*) as record_count,
-        AVG(CASE WHEN value IS NOT NULL THEN value END) as avg_value
-      FROM your_table_name 
-      WHERE created_at >= NOW() - INTERVAL $2 || ' days'
-      GROUP BY DATE_TRUNC($1, created_at)
-      ORDER BY period DESC;
-
-  # Tool per inserire dati (esempio)
-  insert-record:
-    kind: postgres-sql
-    source: my-postgres-db
-    description: Inserisce un nuovo record nel database
-    parameters:
-      - name: name
-        type: string
-        description: Nome del record
-      - name: description
-        type: string
-        description: Descrizione del record
-    statement: |
-      INSERT INTO your_table_name (name, description, created_at)
-      VALUES ($1, $2, NOW())
-      RETURNING id, name, description, created_at;
+    source: test-source
+    description: Test di connessione database
+    statement: SELECT 1 as result;
 
 toolsets:
-  # Gruppo di tool per query base
-  basic_queries:
-    - search-records
-    - get-stats
-    
-  # Gruppo di tool per analytics
-  analytics:
-    - get-data-by-period
-    - get-stats
-    
-  # Tutti i tool
-  all_tools:
-    - search-records
-    - get-stats
-    - get-data-by-period
-    - insert-record
+  basic:
+    - ping
